still working on it

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <audio id="nazgul-screech" src="./media/nazgul_screech.mp3"></audio>
   <audio id="hobbit-theme" src="./media/hobbit_theme.mp3"></audio>
   <script charset="utf-8">
-    var nazgulScreech = function () {
+    let nazgulScreech = function () {
       document.getElementById("nazgul-screech").play();
     };
-    var playTheme = function () {
+    let playTheme = function () {
       document.getElementById("hobbit-theme").play();
     };
     playTheme();
